@@ -1,19 +1,30 @@
-# Basic part of full URL on server. For example:
-# if full URL looks like http://ipv6.example.com/bosixnet/
-# then BASIC_STR should be "/bosixnet/" or "/".
-#BASIC_STR=/bosixnet/
-BASIC_STR=/
+# Basic part of full URL on server.
+# For example, if full URL looks like:
+# http://ipv6.example.com/bosixnet/
+# then BASIC_STR should be:
+# BASIC_STR=/bosixnet/
+# or
+# BASIC_STR=/
+
+# If there are few websites hosted on a same server and you prefer to use
+# domain names for separating them instead of using of single domain name
+# with different URL prefixes (see BASIC_STR variable above) then set
+# HOST_STR variable to required domain name. For example:
+# HOST_STR=ipv6.example.com
+# HOST_STR=93.184.216.34
+# HOST_STR=2606:2800:220:1:248:1893:25c8:1946
+# HOST_STR=
 
 # Directory where generated host file will be stored:
-#LOG_DIR=/var/tmp/bosixnet
+# LOG_DIR=/var/tmp/bosixnet
 
 # Launch bosixnet-webui from specific user:
-#USERID=bosixnet
-#GROUPID=bosixnet
+# USERID=bosixnet
+# GROUPID=bosixnet
 
 # TCP port to which to bind on localhost
-#FCGIPORT=33169
+# FCGIPORT=33169
 
 # Number of bosixnet-webui children to spawn
-#FCGI_CHILDREN=1
+# FCGI_CHILDREN=1
 
